# QuantLLM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTE.md  LICENSE  README.md  llama_cpp.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
benchmark/: run_benchmarks.py
docs/: conf.py  getting_started.rst  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  requirements.txt
docs/api/: gguf.md  hub.md  turbo.md  turbomodel.md
docs/api_reference/: dataset.rst  index.rst  model.rst  quantization.rst  trainer.rst
docs/guide/: consumer-hardware.md  finetuning.md  generation.md  gguf-export.md  hub-integration.md  loading-models.md
docs/tutorials/: index.rst  quick_start.rst  text_classification.rst
examples/: 01_quickstart.py  02_gguf_export.py  03_finetuning.py  04_hub_push.py  README.md  basic_usage.py  benchmark_example.py  complete_usage.py  deployment_examples.py  enhanced_api_example.py  evaluation_system_example.py  export_example.py  finetune_example.py  framework_integration_examples.py  gptq_finetuning_example.py  hub_example.py  inference_example.py  integrated_usage.py  model_size_examples.py  post_quantization_finetuning_example.py  quantization_example.py  turbo_quickstart.py  validation_system_example.py
quantllm/: __init__.py  api.py  utils.py
quantllm/api/: __init__.py  high_level.py  low_level.py  quantization.py
quantllm/cli/: __init__.py  commands.py
quantllm/config/: config_manager.py  dataset_config.py  default_config.yaml  model_config.py
quantllm/core/: __init__.py  compilation.py  export.py  flash_attention.py  hardware.py  memory.py  model_analyzer.py  smart_config.py  training.py  turbo_model.py
quantllm/data/: dataloader.py  dataset_preprocessor.py  dataset_splitter.py  load_dataset.py
quantllm/dataset/: __init__.py  dataloader.py  dataset_loader.py  dataset_preprocessor.py  dataset_splitter.py
quantllm/finetune/: evaluator.py  logger.py  trainer.py
quantllm/hub/: __init__.py  checkpoint_manager.py  hf_manager.py  hub_manager.py  model_card.py
quantllm/kernels/: __init__.py
quantllm/model/: __init__.py  model.py  model_loader.py
quantllm/quant/: __init__.py  awq.py  formats.py  gguf.py  gguf_converter.py  gguf_writer.py  gptq.py  kernels.py  (+3 more)
test/: test_gguf_quantization.py
tests/: test_architecture_fallback.py  test_export_push_config.py  test_quantization_state.py  test_resolve_model_type.py
(+21 files in other folders)
